// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Simple > default: prefix=f 1`] = `
{
  "f1": 105,
}
`;

exports[`Simple > prefix=a 1`] = `
{
  "a1": 105,
}
`;

exports[`Test > default: prefix=f, stringMode=auto, arrayMode=false 1`] = `
{
  "f1": {
    "data": [
      1,
      2,
      3,
      4,
      5,
    ],
    "type": "Buffer",
  },
  "f2": 1,
  "f3": "hello",
  "f4": [
    {
      "f1": 1,
      "f2": "cool",
      "f3": {
        "f1": 1,
      },
    },
    {
      "f1": 2,
      "f2": "awesome",
      "f3": {
        "f1": 2,
      },
    },
    {
      "f1": 3,
      "f2": "neat",
      "f3": {
        "f1": 3,
      },
    },
  ],
}
`;

exports[`Test > prefix=a, stringMode=auto, arrayMode=false 1`] = `
{
  "a1": {
    "data": [
      1,
      2,
      3,
      4,
      5,
    ],
    "type": "Buffer",
  },
  "a2": 1,
  "a3": "hello",
  "a4": [
    {
      "a1": 1,
      "a2": "cool",
      "a3": {
        "a1": 1,
      },
    },
    {
      "a1": 2,
      "a2": "awesome",
      "a3": {
        "a1": 2,
      },
    },
    {
      "a1": 3,
      "a2": "neat",
      "a3": {
        "a1": 3,
      },
    },
  ],
}
`;

exports[`Test > prefix=f, stringMode=auto, arrayMode=true 1`] = `
{
  "f1": [
    {
      "data": [
        1,
        2,
        3,
        4,
        5,
      ],
      "type": "Buffer",
    },
  ],
  "f2": [
    1,
  ],
  "f3": [
    "hello",
  ],
  "f4": [
    {
      "f1": [
        1,
      ],
      "f2": [
        "cool",
      ],
      "f3": [
        {
          "f1": [
            1,
          ],
        },
      ],
    },
    {
      "f1": [
        2,
      ],
      "f2": [
        "awesome",
      ],
      "f3": [
        {
          "f1": [
            2,
          ],
        },
      ],
    },
    {
      "f1": [
        3,
      ],
      "f2": [
        "neat",
      ],
      "f3": [
        {
          "f1": [
            3,
          ],
        },
      ],
    },
  ],
}
`;

exports[`Test > prefix=f, stringMode=buffer, arrayMode=false 1`] = `
{
  "f1": {
    "data": [
      1,
      2,
      3,
      4,
      5,
    ],
    "type": "Buffer",
  },
  "f2": 1,
  "f3": {
    "data": [
      104,
      101,
      108,
      108,
      111,
    ],
    "type": "Buffer",
  },
  "f4": [
    {
      "f1": 1,
      "f2": {
        "data": [
          99,
          111,
          111,
          108,
        ],
        "type": "Buffer",
      },
      "f3": {
        "f1": 1,
      },
    },
    {
      "f1": 2,
      "f2": {
        "data": [
          97,
          119,
          101,
          115,
          111,
          109,
          101,
        ],
        "type": "Buffer",
      },
      "f3": {
        "f1": 2,
      },
    },
    {
      "f1": 3,
      "f2": {
        "data": [
          110,
          101,
          97,
          116,
        ],
        "type": "Buffer",
      },
      "f3": {
        "f1": 3,
      },
    },
  ],
}
`;

exports[`Test > prefix=f, stringMode=string, arrayMode=false 1`] = `
{
  "f1": "",
  "f2": 1,
  "f3": "hello",
  "f4": [
    {
      "f1": 1,
      "f2": "cool",
      "f3": {
        "f1": 1,
      },
    },
    {
      "f1": 2,
      "f2": "awesome",
      "f3": {
        "f1": 2,
      },
    },
    {
      "f1": 3,
      "f2": "neat",
      "f3": {
        "f1": 3,
      },
    },
  ],
}
`;
